noinst_LIBRARIES = libnoyau.a

INCLUDES = -I.. -I../../base

libnoyau_a_SOURCES = ../affichable.h \
../distance.h \
../modele.h \
../position.h \
../controle.h \
../etat.h \
../objet_physique.h \
../vue.h \
../implantation/affichable.cpp \
../implantation/objet_physique.cpp \
../implantation/distance.cpp \
../implantation/position.cpp \
../implantation/etat.cpp

libnoyau_a_CXXFLAGS = $(OGRE_CFLAGS)
libnoyau_a_LDFLAGS = $(OGRE_LIBS)
